# Cortex

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: __init__.py  config.py  main.py
api/app/db/: base.py  session.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 20260629_0001_create_ingestion_jobs.py  20260629_0002_create_repository_file_chunk_tables.py  20260630_0003_add_ingestion_progress.py
api/app/models/: chunk.py  ingestion_job.py  repository.py  source_file.py
api/app/pipeline/: __init__.py  chunking.py  documents.py  filtering.py  sample_source.py
api/app/providers/: embeddings.py  github.py  llm.py  vector_store.py
api/app/repositories/: chunks.py  indexed_content.py  ingestion_jobs.py  repositories.py  search.py
api/app/routes/: ask.py  chunks.py  health.py  ingestions.py  repositories.py  search.py
api/app/schemas/: ask.py  chunk.py  ingestion.py  repository.py  search.py
api/app/services/: rag.py  vector_indexing.py
api/app/workers/: celery_app.py
api/scripts/: fetch_github_repo.py
api/tests/: test_health.py
web/: .dockerignore  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
web/src/: App.tsx  styles.css
web/src/components/ask/: AnswerPanel.tsx  AskPanel.tsx
web/src/components/layout/: AppShell.tsx
web/src/components/repositories/: RepositoryPanel.tsx
web/src/hooks/: useAsk.ts  usePersistentState.ts  useRepositories.ts
web/src/lib/: api.ts  github.ts
(+2 files in other folders)
